update requirements; remove extraneous tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,33 @@
-pysam==0.21.0
+annotated-types==0.7.0
+argcomplete==3.5.3
+argh==0.31.3
+black==25.1.0
+click==8.1.8
+coverage==7.6.12
+gffutils==0.13
+importlib_metadata==8.6.1
+iniconfig==2.0.0
 intervaltree==3.1.0
-pandas==2.0.0
-gffutils==0.12.0
-numpy==1.24.0
-
-# Development dependencies
-pytest==7.0.0
-pytest-cov==4.0.0
-black==23.0.0
-isort==5.0.0 
+isort==6.0.1
+mypy-extensions==1.0.0
+numpy==2.2.3
+packaging==24.2
+pandas==2.2.3
+pathspec==0.12.1
+platformdirs==4.3.6
+pluggy==1.5.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+pyfaidx==0.8.1.3
+pysam==0.23.0
+pytest==8.3.5
+pytest-cov==6.0.0
+python-dateutil==2.9.0.post0
+pytz==2025.1
+simplejson==3.20.1
+six==1.17.0
+sortedcontainers==2.4.0
+typing_extensions==4.12.2
+tzdata==2025.1
+-e git+https://github.com/stacy-l/vesper.git@69fdd8938c1b9408aa6725279729d1dd24e17d43#egg=vesper
+zipp==3.21.0
