--- a/environment.yml
+++ b/environment.yml
@@ -5,16 +5,40 @@ channels:
   - defaults
 dependencies:
   - python>=3.8
-  - pysam=0.21.0
+  - pysam=0.23.0
   - intervaltree=3.1.0
-  - pandas=2.0.0
-  - gffutils=0.12.0
-  - numpy=1.24.0
+  - pandas=2.2.3
+  - gffutils=0.13
+  - numpy=2.2.3
+  - pydantic=2.10.6
   # Development tools
-  - pytest=7.0.0
-  - pytest-cov=4.0.0
-  - black=23.0.0
-  - isort=5.0.0
+  - pytest=8.3.5
+  - pytest-cov=6.0.0
+  - black=25.1.0
+  - isort=6.0.1
+  # Additional dependencies from requirements.txt
+  - annotated-types=0.7.0
+  - argcomplete=3.5.3
+  - argh=0.31.3
+  - click=8.1.8
+  - coverage=7.6.12
+  - importlib_metadata=8.6.1
+  - iniconfig=2.0.0
+  - mypy-extensions=1.0.0
+  - packaging=24.2
+  - pathspec=0.12.1
+  - platformdirs=4.3.6
+  - pluggy=1.5.0
+  - pydantic-core=2.27.2
+  - pyfaidx=0.8.1.3
+  - python-dateutil=2.9.0.post0
+  - pytz=2025.1
+  - simplejson=3.20.1
+  - six=1.17.0
+  - sortedcontainers=2.4.0
+  - typing-extensions=4.12.2
+  - tzdata=2025.1
+  - zipp=3.21.0
   - pip
-  - pip: # note that this is specifically for development and sghould be fixed later
+  - pip:
     - -e . 
