--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "intervaltree>=3.1.0",
     "pandas>=2.0.0",
     "gffutils>=0.12.0",
-    "numpy>=1.24.0"
+    "numpy>=1.24.0",
+    "pydantic>=2.10.6"
 ]
 
 [project.optional-dependencies]
