--- a/environment.yml
+++ b/environment.yml
@@ -24,6 +24,8 @@ dependencies:
   - coverage=7.6.12
   - importlib_metadata=8.6.1
   - iniconfig=2.0.0
+  - markdown-it-py=3.0.0
+  - mdurl=0.1.2
   - mypy-extensions=1.0.0
   - packaging=24.2
   - pathspec=0.12.1
@@ -31,8 +33,11 @@ dependencies:
   - pluggy=1.5.0
   - pydantic-core=2.27.2
   - pyfaidx=0.8.1.3
+  - pygments=2.19.1
   - python-dateutil=2.9.0.post0
   - pytz=2025.1
+  - rich=13.9.4
+  - rich-argparse=1.7.0
   - simplejson=3.20.1
   - six=1.17.0
   - sortedcontainers=2.4.0
