fixed,updated requirements and install

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,13 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "pysam==0.23.0",
-    "intervaltree==3.1.0",
     "pandas==2.2.3",
-    "gffutils==0.13",
     "numpy==2.2.3",
+    "rich==13.9.4",
+    "rich-argparse==1.7.0",
     "pydantic==2.10.6",
-    "annotated-types==0.7.0",
     "pydantic-core==2.27.2",
+    "annotated-types==0.7.0",
     "typing-extensions==4.12.2"
 ]
 
