--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,40 @@
 annotated-types==0.7.0
+appnope==0.1.4
+asttokens==3.0.0
 black==25.1.0
 click==8.1.8
+comm==0.2.2
 coverage==7.6.12
+debugpy==1.8.14
+decorator==5.2.1
+edlib==1.3.9.post1
+executing==2.2.0
 h5py==3.13.0
 iniconfig==2.0.0
+ipykernel==6.29.5
+ipython==9.1.0
+ipython_pygments_lexers==1.1.1
 isort==6.0.1
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 markdown-it-py==3.0.0
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 mypy-extensions==1.0.0
+nest-asyncio==1.6.0
 numpy==2.2.3
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
 pathspec==0.12.1
+pexpect==4.9.0
 platformdirs==4.3.6
 pluggy==1.5.0
+prompt_toolkit==3.0.50
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
@@ -22,9 +43,15 @@ pytest==8.3.5
 pytest-cov==6.0.0
 python-dateutil==2.9.0.post0
 pytz==2025.1
+pyzmq==26.4.0
 rich==13.9.4
 rich-argparse==1.7.0
 six==1.17.0
+stack-data==0.6.3
+tornado==6.4.2
+traitlets==5.14.3
 trf==1.1.1
 typing_extensions==4.12.2
 tzdata==2025.1
+-e git+https://github.com/stacy-l/vesper.git@f0ba7f37e12d3efd03e93bfb21fb8a907f81a301#egg=vesper
+wcwidth==0.2.13
