--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,6 @@ dependencies:
   - rich-argparse==1.7.0
   - annotated-types==0.7.0
   - typing-extensions==4.12.2
-  - repeatmasker==4.1.8
+  - repeatmasker==4.1.2.p1
   - trf==4.09.1
   - rmblast==2.14.1
