--- a/environment.yml
+++ b/environment.yml
@@ -16,15 +16,18 @@ dependencies:
   - bcftools==1.22
   - pysam==0.23.3
   - pandas==2.3.0
-  - pyarrow==22.0.0
   - numpy==2.3.1
   - pytest==8.3.5
-  - rich==1.7.0
+  - pytest-cov==6.0.0
+  - rich==14.2.0
   - rich-argparse==1.7.0
   - annotated-types==0.7.0
   - typing-extensions==4.12.2
+  - black==25.1.0
+  - isort==6.0.1
+  - coverage==7.6.12
   - ruff==0.14.2
   - repeatmasker==4.1.2.p1
   - trf==4.09.1
   - rmblast==2.14.1
-  - edlib==1.3.9.post1
+  - python-edlib==1.3.9.post1
